--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,87 +9,83 @@
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
+  <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <title>Saint Dismas Prison Ministry</title>
 </head>
+
 <body>
-  <nav class="navbar navbar-fixed-top">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"><img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" /></a>
+  <nav class="navbar navbar-fixed navbar-custom">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        </a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="glyphicon glyphicon-menu-down"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Donations</a></li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
     </div>
+    <!-- /.container-fluid -->
+  </nav>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-  <div class="contained">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="jumbotron text-center">
-          <h1 class="lead">Hello, Welcome to Our Website</h1>
-          <a href="" class="btn btn-lg btn-success">
-            Click me please
-          </a>
-        </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="jumbotron text-center">
+        <h1 class="lead">
+          "LOCK 'EM UP AND THROW AWAY THE KEYS'"
+        </h1>
+        <p>
+          When refferring to prison inmates, today's society often exclaims, "Lock 'em up and throw away the keys!"
+        </p>
+        <p>
+          But Jesus mandates something quite diffrent to those who follow him:
+        </p>
+        <p>
+          That we visit them. (Matthew 25;31-36)
+        </p>
       </div>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-8 col-sm-push-4 col-md- col-md-8">
+      <div class="col-xs-12 col-sm-8 col-sm-push-3 col-md-8">
         <h3>Hello Title is here</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum est in libero imperdiet vehicula. Sed convallis ex sed euismod scelerisque. Cras a fermentum tortor. Donec arcu mi, malesuada ac felis id, aliquet vulputate odio. Integer vulputate ornare tortor, cursus vestibulum erat hendrerit ut. Curabitur velit enim, suscipit ac nulla sit amet, venenatis tempor nibh. Fusce et lacus sit amet dolor</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum est in libero imperdiet vehicula. Sed convallis ex sed euismod scelerisque. Cras a fermentum tortor. Donec arcu mi, malesuada ac felis id, aliquet vulputate odio. Integer
+          vulputate ornare tortor, cursus vestibulum erat hendrerit ut. Curabitur velit enim, suscipit ac nulla sit amet, venenatis tempor nibh. Fusce et lacus sit amet dolor</p>
 
         <hr>
         <h3>Hello Title is here</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum est in libero imperdiet vehicula. Sed convallis ex sed euismod scelerisque. Cras a fermentum tortor. Donec arcu mi, malesuada ac felis id, aliquet vulputate odio. Integer vulputate ornare tortor, cursus vestibulum erat hendrerit ut. Curabitur velit enim, suscipit ac nulla sit amet, venenatis tempor nibh. Fusce et lacus sit amet dolor</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum est in libero imperdiet vehicula. Sed convallis ex sed euismod scelerisque. Cras a fermentum tortor. Donec arcu mi, malesuada ac felis id, aliquet vulputate odio. Integer
+          vulputate ornare tortor, cursus vestibulum erat hendrerit ut. Curabitur velit enim, suscipit ac nulla sit amet, venenatis tempor nibh. Fusce et lacus sit amet dolor</p>
       </div>
-      <div class="col-xs-12 col-sm-4 col-sm-pull-8 col-md-pull-8 col-md-4">
+      <div class="col-xs-12 col-sm-4 col-sm-pull-9 col-md-4">
         <h4>Topic</h4>
         <ul>
           <li><a href="">Fun</a></li>
@@ -107,4 +104,5 @@
     </div>
   </div>
 </body>
+
 </html>
