Updated navbar and added js for navbar-fixed, and logo size.

--- a/home.html
+++ b/home.html
@@ -1,154 +1,193 @@
 <!DOCTYPE html>
 <html lang="">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
-    <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
-    <title>Saint Dismas Prison Ministry</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="javascripts/dismas.js"></script>
 
-  <body>
-    <nav class="navbar navbar-fixed navbar-custom">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">
-            <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
-          </a>
-        </div>
+  <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
+  <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
+  <title>Saint Dismas Prison Ministry</title>
+</head>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="glyphicon glyphicon-menu-down"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Creed &amp; Vision</a></li>
-                <li><a href="#">Our Work</a></li>
-                <li><a href="#">Board of Directors</a></li>
-                <li><a href="#">Donations</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="fa fa-university"></span>&nbsp;Donations</a></li>
-          </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+<body>
+<div class="navbar-wrapper">
+  <nav class="navbar navbar-default navbar-custom">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#"><img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo"></a>
       </div>
-      <!-- /.container-fluid -->
-    </nav>
 
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Creed &amp; Vision</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Indigent Inmate Funds</a></li>
+              <li><a href="#">EOS Packages</a></li>
+              <li><a href="#">Fresh Start Program</a></li>
+              <li><a href="#">Family Assistance</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Greeting Card Program</a></li>
+              <li><a href="#">Art Program</a></li>
+              <li><a href="#">Farm Program</a></li>
+              <li><a href="#">Art Program</a></li>
+              <li><a href="#">Apiary Program (Bee Keeping)</a></li>
+              <li><a href="#">Sports Equipment</a></li>
+              <li><a href="#">Santa in Prison</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">The CVLI License</a></li>
+              <li><a href="#">Literacy Program/a></li>
+              <li><a href="#">Gavel Club (Toastmasters)</a></li>
+              <li><a href="#">Veteran Posts</a></li>
+              <li><a href="#">Metrit Drom</a></li>
+              <li><a href="#">Educational &amp; Vocational Training</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Board of Directors</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+</div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="hero text-center">
+        <h1 class="lead">
+          "LOCK 'EM UP
+          <br>AND THROW AWAY THE KEYS"
+        </h1>
+        <p>
+          That's what most in today's society say about prison inmates...
+        </p>
+        <p>
+          But Jesus mandates something quite diffrent to those who follow him:
+        </p>
+        <p>
+          That we visit them. (Matthew 25;31-36)
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12">
-        <div class="hero text-center">
-          <h1 class="lead">
-            "LOCK 'EM UP<br>AND THROW AWAY THE KEYS'"
-          </h1>
+      <div class="col-xs-12 col-sm-4 col-md-3">
+        <aside class="text-center">
           <p>
-            That's what most in today's society say about prison inmates...
+            “I was in prison and you came to visit me...
+            <br>I tell you the truth, whatever you did
+            <br>for one of the least of these brothers
+            <br> of mine, you did for me.”
+            <br>&mdash;Matthew 25:36, 40
           </p>
-          <p>
-            But Jesus mandates something quite diffrent to those who follow him:
-          </p>
-          <p>
-            That we visit them. (Matthew 25;31-36)
-          </p>
-        </div>
+          <img src="images/jesus_bars.JPG" alt="Sketch of Jesus. Black and white." />
+        </aside>
+      </div>
+      <div class="col-xs-12 col-sm-8 col-md-9 main-text">
+        <p>The overwhelming majority of prison inmates never get family visitors. They are truly God's forgotten people. For valid security reasons, prisons set rigid visitation rules re: eligibility, day, time, and length of visit. These rules are often
+          subject to change without notice, making visitation difficult. The few family and prison ministry visitors are all subject to the same rules.
+        </p>
+        <p>Consequently, inmates look forward with eager anticipation to these visits.</p>
+        <p>
+          Although two thirds of prison inmates are functionally illiterate many inmates crave reading materials, books, pamphlets and prayer books. Unfortunately these are considered contraband unless they are mailed in directly from the publisher or bookstore.
+          This generally requires family involvement or a source of funds from somewhere else.
+        </p>
+        <p>
+          Sadly, most are left with no outside contact and must fend for themselves. Inmates without the benefit of funds for the purchase of personal hygiene items (deodorant, toothpaste), stamps or packet of instant coffee from the prison canteen leads them to
+          the realization that no one cares about them. Acceptance of that fact by the inmate, produces loneliness and despair and breeds bitterness and a separation from goodness. It is so easy to see the "suffering Christ" in these inmates. The rigid
+          rules for visitors do not permit anything to be brought in (nothing in / nothing out).
+        </p>
+        <hr>
       </div>
     </div>
+  </div>
 
-    <div class="container-fluid">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4 col-md-3 main-text">
+        <aside class="text-center">
+          <p>
+            “Remember those in prison
+            <br>as if you were their fellow prisoners,
+            <br> and those who are mistreated
+            <br> as if you yourselves were suffering.”
+            <br> Hebrews 13:1-3
+            <br>
+          </p>
+          <img src="images/jesus_bars_art_small.jpg" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
+        </aside>
+      </div>
+      <div class="col-xs-12 col-sm-8 col-md-9 main-text">
+        <div class="text-center bring-up">
+          <img src="images/cell_light.jpg" alt="Image of window in prison cell with light streaming through." />
+          <p>
+            “Brothers, if someone is caught in a sin, you who are spiritual should restore him gently.&nbsp;&mdash;Galatians 6:1-2
+          </p>
+        </div>
+        <p class="lead">
+          In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering to the inmates, an ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the
+          support of a local judge and few dedicated prison ministers he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue qualified 501-C3 charitable corporation.
+        </p>
+        <p>
+          The Saint Dismas Prison Ministry Foundation, registered with the State of Florida was established to raise and disburse funds that will directly benefit prison inmates and ministry to them without regard to their religious affiliation.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <footer class="">
+    <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-4 col-md-3">
-          <aside class="text-center">
-            <p>
-              “I was in prison and you came to visit me...<br>I tell you the truth, whatever you did<br>for one of the least of these brothers<br> of mine, you did for me.”<br>&mdash;Matthew 25:36, 40
-            </p>
-            <img src="images/jesus_bars.JPG" alt="Sketch of Jesus. Black and white." />
-          </aside>
+        <div class="col-xs-4">
+          <p class="footer-left">
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-          <p class="lead">The overwhelming majority of prison inmates never get family visitors.
-            They are truly God's forgotten people. For valid security reasons, prisons set rigid visitation rules re: eligibility, day, time, and length of visit. These rules are often subject to change without notice, making visitation difficult. The few family and prison ministry visitors are all subject to the same rules.
-          </p>
-          <p>Consequently, inmates look forward with eager anticipation to these visits.</p>
-          <p>
-            Although two thirds of prison inmates are functionally illiterate many inmates crave reading materials, books, pamphlets and prayer books. Unfortunately these are considered contraband unless they are mailed in directly from the publisher or bookstore. This generally requires family involvement or a source of funds from somewhere else.
-          </p>
-          <p>
-            Sadly, most are left with no outside contact and must fend for themselves. Inmates without the benefit of funds for the purchase of personal hygiene items (deodorant, toothpaste), stamps or packet of instant coffee from the prison canteen leads them to the realization that no one cares about them. Acceptance of that fact by the inmate, produces loneliness and despair and breeds bitterness and a separation from goodness. It is so easy to see the "suffering Christ" in these inmates. The rigid rules for visitors do not permit anything to be brought in (nothing in / nothing out).
-          </p>
-          <hr>
+        <div class="col-xs-4 text-center">
+          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
         </div>
-      </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-12 col-sm-4 col-md-3 main-text">
-          <aside class="text-center">
-            <p>
-              “Remember those in prison <br>as if you were their fellow prisoners,<br> and those who are mistreated<br> as if you yourselves were suffering.”<br> Hebrews 13:1-3<br>
-            </p>
-            <img src="images/jesus_bars_art_small.jpg" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
-          </aside>
-        </div>
-        <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-          <div class="text-center bring-up">
-            <img src="images/cell_light.jpg" alt="Image of window in prison cell with light streaming through." />
-            <p>
-              “Brothers, if someone is caught in a sin, you who are spiritual should restore him gently.&nbsp;&mdash;Galatians 6:1-2
-            </p>
-          </div>
-          <p class="lead">
-            In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering the inmates, An Ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the support of a local judge and few dedicated prison ministers he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue qualified 501-C3 charitable corporation.
-          </p>
-          <p>
-            The Saint Dismas Prison Ministry Foundation, registered with the State of Florida was established to raise and disburse funds that will directly benefit prison inmates and ministry to them without regard to their religious affiliation.
+        <div class="col-xs-4">
+          <p class="text-right footer-right">
+            Copyright &copy; 2015
+            <br>
+            <br>
+            <span class="tag">Website by: D&amp;D Web Development</span>
           </p>
         </div>
       </div>
     </div>
+  </footer>
 
-    <footer class="">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-4">
-            <p class="footer-left">
-              Saint Dismas Prison Ministry Foundation<br>
-              1701 Indian Creek Parkway<br>
-              Jupiter, Florida 33458<br>
-              561-662-0832   <br>
-            </p>
-          </div>
-          <div class="col-xs-4 text-center">
-            <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
-          </div>
-          <div class="col-xs-4">
-            <p class="text-right footer-right">
-              Copyright &copy; 2015
-              <br><br><span class="tag">Website by: D&amp;D Web Development</span>
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-  </body>
+</body>
 
 </html>
