Pushing latest changes.

--- a/home.html
+++ b/home.html
@@ -130,7 +130,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-sm-4 col-md-3 main-text">
+      <div class="col-xs-12 col-sm-4 col-md-3">
         <aside class="text-center">
           <p>
             “Remember those in prison
@@ -150,7 +150,7 @@
             “Brothers, if someone is caught in a sin, you who are spiritual should restore him gently.&nbsp;&mdash;Galatians 6:1-2
           </p>
         </div>
-        <p class="lead">
+        <p>
           In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering to the inmates, an ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the
           support of a local judge and few dedicated prison ministers he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue qualified 501-C3 charitable corporation.
         </p>
