--- a/creed.html
+++ b/creed.html
@@ -2,7 +2,7 @@
 <html lang="">
 
   <head>
-    <meta charset="UTF-8">
+    <!-- <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
     <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
-    <title>Saint Dismas Prison Ministry</title>
+    <title>Saint Dismas Prison Ministry</title> -->
   </head>
 
   <body>
