--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@
           </div>
           <p>
             In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering to the inmates, an ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the
-            support of a local judge and few dedicated prison ministers he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue qualified 501-C3 charitable corporation.
+            support of a local judge and few dedicated prison ministers he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue Service qualified 501-C3 charitable corporation.
           </p>
           <p>
             The Saint Dismas Prison Ministry Foundation, registered with the State of Florida was established to raise and disburse funds that will directly benefit prison inmates and ministry to them without regard to their religious affiliation.
