Created Mandate page and cleaned up some styling.

--- a/creed.html
+++ b/creed.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
 
   <head>
-    <!-- <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -13,7 +13,8 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
     <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
-    <title>Saint Dismas Prison Ministry</title> -->
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
+    <title>Saint Dismas - Creed &amp; Vision</title>
   </head>
 
   <body>
@@ -35,6 +36,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li><a href="creed.html">Creed &amp; Vision</a></li>
+              <li><a href="mandate.html">Our Mandate</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -79,11 +81,12 @@
         <div class="col-xs-12 col-sm-4 col-md-3">
           <aside class="text-center">
             <p>
-              “Remember those who are in prison,
-              <br>as though in prison with them,
-              <br>and those who are mistreated
-              <br> since you also are in the body.”
-              <br>&mdash;Hebrews 13:3
+              “I was in prison and you came to visit me...
+              <br>I tell you the truth, whatever you did
+              <br>for one of the least of these brothers
+              <br>of mine, you did for me.”
+              <br>&mdash;Matthew 25:36, 40
+              <br>
             </p>
             <img src="images/jesus_sketch.gif" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
           </aside>
@@ -91,16 +94,16 @@
         <div class="col-xs-12 col-sm-8 col-md-9 main-text">
           <img src="images/cell_light.jpg" class="main-column-img center-block responsive" alt="Light shining through cell barred window.">
           <p>
-            <span class="cursive">We believe</span> that each person, victim as well as offender, has a unique and mysterious value and fundamental dignity.
+            <span class="cursive larger">We believe</span> that each person, victim as well as offender, has a unique and mysterious value and fundamental dignity.
           </p>
           <p>
-            <span class="cursive">We believe</span> that those who are incarcerated are capable of love and of living productive lives, which can be called forth by the Spirit of God.
+            <span class="cursive larger">We believe</span> that those who are incarcerated are capable of love and of living productive lives, which can be called forth by the Spirit of God.
           </p>
           <p>
-            <span class="cursive">We believe</span> that God loves and forgives these inmates in a very special way because of their weaknesses.
+            <span class="cursive larger">We believe</span> that God loves and forgives these inmates in a very special way because of their weaknesses.
           </p>
           <p>
-            <span class="cursive">We believe</span> that, if given a chance to know their God (perhaps for the first time) in an atmosphere of understanding without condoning, rehabilitation without retribution, and restorative  justice without discouragement, these men and women can become productive  citizens and not return to the “throw-away society” that is prison.
+            <span class="cursive larger">We believe</span> that, if given a chance to know their God (perhaps for the first time) in an atmosphere of understanding without condoning, rehabilitation without retribution, and restorative  justice without discouragement, these men and women can become productive  citizens and not return to the “throw-away society” that is prison.
           </p>
         </div>
       </div>
