--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,8 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
     <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
-    <title>Saint Dismas Prison Ministry</title>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
+    <title>Saint Dismas Prison Ministry - Home</title>
   </head>
 
   <body>
@@ -27,13 +28,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo"></a>
+          <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="creed.html">Creed &amp; Vision</a></li>
+            <li><a href="mandate.html">Our Mandate</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -98,11 +100,11 @@
         <div class="col-xs-12 col-sm-4 col-md-3">
           <aside class="text-center">
             <p>
-              “I was in prison and you came to visit me...
-              <br>I tell you the truth, whatever you did
-              <br>for one of the least of these brothers
-              <br> of mine, you did for me.”
-              <br>&mdash;Matthew 25:36, 40
+              “For God so loved the world,
+              <br>that he gave his only Son,
+              <br>that whoever believes in him
+              <br> should not perish but have eternal life.
+              <br>&mdash;John 3:16
             </p>
             <img src="images/jesus_bars_art_small.jpg" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
           </aside>
@@ -131,11 +133,11 @@
         <div class="col-xs-12 col-sm-4 col-md-3">
           <aside class="text-center">
             <p>
-              “Remember those in prison
-              <br>as if you were their fellow prisoners,
-              <br> and those who are mistreated
-              <br> as if you yourselves were suffering.”
-              <br> Hebrews 13:1-3
+              “I was in prison and you came to visit me...
+              <br>I tell you the truth, whatever you did
+              <br>for one of the least of these brothers
+              <br>of mine, you did for me.”
+              <br>&mdash;Matthew 25:36, 40
               <br>
             </p>
             <img src="images/jesus_bars.JPG" alt="Sketch of Jesus. Black and white." />
@@ -144,9 +146,6 @@
         <div class="col-xs-12 col-sm-8 col-md-9 main-text">
           <div class="text-center bring-up">
             <img src="images/reading_bible.jpg" alt="Image of window in prison cell with light streaming through." />
-            <p>
-              “Brothers, if someone is caught in a sin, you who are spiritual should restore him gently.&nbsp;&mdash;Galatians 6:1-2
-            </p>
           </div>
           <p>
             In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering to the inmates, an ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the
@@ -158,7 +157,6 @@
         </div>
       </div>
     </div>
-
     <footer class="">
       <div class="container">
         <div class="row">
