Added Programs and Funds pages. Added all pages to the project file.

--- a/creed.html
+++ b/creed.html
@@ -41,7 +41,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="funds.html">Indigent Inmate Funds</a></li>
-                  <li><a href="packges.html">EOS Packages</a></li>
+                  <li><a href="packages.html">EOS Packages</a></li>
                   <li><a href="fresh-start.html">Fresh Start Program</a></li>
                   <li><a href="family-assistance.html">Family Assistance</a></li>
                   <li role="separator" class="divider"></li>
@@ -52,7 +52,7 @@
                   <li><a href="sports-equipment.html">Sports Equipment</a></li>
                   <li><a href="santa.html">Santa in Prison</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="#cvli-licens.html">The CVLI License</a></li>
+                  <li><a href="cvli-license.html">The CVLI License</a></li>
                   <li><a href="literacy-program.html">Literacy Program/a></li>
                   <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                   <li><a href="veteran-posts.html">Veteran Posts</a></li>
