--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="funds.html">Indigent Inmate Funds</a></li>
-                <li><a href="packges.html">EOS Packages</a></li>
+                <li><a href="packages.html">EOS Packages</a></li>
                 <li><a href="fresh-start.html">Fresh Start Program</a></li>
                 <li><a href="family-assistance.html">Family Assistance</a></li>
                 <li role="separator" class="divider"></li>
@@ -51,7 +51,7 @@
                 <li><a href="sports-equipment.html">Sports Equipment</a></li>
                 <li><a href="santa.html">Santa in Prison</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#cvli-licens.html">The CVLI License</a></li>
+                <li><a href="cvli-license.html">The CVLI License</a></li>
                 <li><a href="literacy-program.html">Literacy Program/a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
@@ -148,11 +148,10 @@
             <img src="images/reading_bible.jpg" alt="Image of window in prison cell with light streaming through." />
           </div>
           <p>
-            In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering to the inmates, an ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the
-            support of a local judge and few dedicated prison ministers he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue Service qualified 501-C3 charitable corporation.
+            In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering to the inmates, an ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the support of a local judge and few dedicated prison ministers, he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue Service qualified 501-C3 charitable corporation.
           </p>
           <p>
-            The Saint Dismas Prison Ministry Foundation, registered with the State of Florida was established to raise and disburse funds that will directly benefit prison inmates and ministry to them without regard to their religious affiliation.
+            The Saint Dismas Prison Ministry Foundation, registered with the State of Florida, was established to raise and disburse funds that will directly benefit prison inmates and ministry to them without regard to their religious affiliation.
           </p>
         </div>
       </div>
