--- a/mandate.html
+++ b/mandate.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
   <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
-  <title>Saint Dismas Prison Ministry - Home</title>
+  <title>Saint Dismas - Our Mandate</title>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="funds.html">Indigent Inmate Funds</a></li>
-                <li><a href="packges.html">EOS Packages</a></li>
+                <li><a href="packages.html">EOS Packages</a></li>
                 <li><a href="fresh-start.html">Fresh Start Program</a></li>
                 <li><a href="family-assistance.html">Family Assistance</a></li>
                 <li role="separator" class="divider"></li>
@@ -54,7 +54,7 @@
                 <li><a href="sports-equipment.html">Sports Equipment</a></li>
                 <li><a href="santa.html">Santa in Prison</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#cvli-licens.html">The CVLI License</a></li>
+                <li><a href="cvli-license.html">The CVLI License</a></li>
                 <li><a href="literacy-program.html">Literacy Program/a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
