Changed image file names.

--- a/packages.html
+++ b/packages.html
@@ -100,7 +100,7 @@
         <p class="bring-down">
           Provides new clothing and shoes purchased to the inmate’s measurements for those leaving prison.
         </p>
-          <img src="images/farm2.jpg" class="main-column-img center-block responsive" alt="Group of prisoners, ministers, and staff posing after farm work.">
+          <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group of prisoners, ministers, and staff posing after farm work.">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
