--- a/funds.html
+++ b/funds.html
@@ -101,7 +101,7 @@
         <p class="bring-down">
           The Foundation makes direct deposits to the Inmate Trust Fund in the name of qualified indigent inmates
         </p>
-          <img src="images/confirmation.jpg" class="main-column-img center-block responsive" alt="Two champlains and two prisoners celebrating a confirmation.">
+          <img src="images/confirmation.JPG" class="main-column-img center-block responsive" alt="Two champlains and two prisoners celebrating a confirmation.">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
