Added images and created new pages for various ministry programs.

--- a/creed.html
+++ b/creed.html
@@ -53,7 +53,7 @@
                   <li><a href="santa.html">Santa in Prison</a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="cvli-license.html">The CVLI License</a></li>
-                  <li><a href="literacy-program.html">Literacy Program/a></li>
+                  <li><a href="literacy-program.html">Literacy Program</a></li>
                   <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                   <li><a href="veteran-posts.html">Veteran Posts</a></li>
                   <li><a href="merit-dorm.html">Merit Dorm</a></li>
@@ -92,13 +92,14 @@
           </aside>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-          <img src="images/cell_light.jpg" class="main-column-img center-block responsive" alt="Light shining through cell barred window.">
+          <h1 class="text-center ftg">Creed &amp; Vision</h1>
           <p>
             <span class="cursive larger">We believe</span> that each person, victim as well as offender, has a unique and mysterious value and fundamental dignity.
           </p>
           <p>
             <span class="cursive larger">We believe</span> that those who are incarcerated are capable of love and of living productive lives, which can be called forth by the Spirit of God.
           </p>
+          <img src="images/cell_light.jpg" class="main-column-img center-block responsive" alt="Light shining through cell barred window.">
           <p>
             <span class="cursive larger">We believe</span> that God loves and forgives these inmates in a very special way because of their weaknesses.
           </p>
