--- a/packages.html
+++ b/packages.html
@@ -55,7 +55,7 @@
                 <li><a href="santa.html">Santa in Prison</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="cvli-license.html">The CVLI License</a></li>
-                <li><a href="literacy-program.html">Literacy Program/a></li>
+                <li><a href="literacy-program.html">Literacy Program</a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
                 <li><a href="merit-dorm.html">Merit Dorm</a></li>
@@ -97,8 +97,9 @@
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
+        <h1 class="text-center ftg">EOS Packages</h1>
         <p class="bring-down">
-          Provides new clothing and shoes purchased to the inmate’s measurements for those leaving prison.
+          This program provides new clothing and shoes purchased to the inmate’s measurements. A bo is provided to the indigent inmates on thier EOS (end of sentence) date. These inmates don't necessarily receive "fresh start" funds. since its inception, 75 inmates have received EOS packages.
         </p>
           <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group of prisoners, ministers, and staff posing after farm work.">
         <p>
