--- a/funds.html
+++ b/funds.html
@@ -55,7 +55,7 @@
                 <li><a href="santa.html">Santa in Prison</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#cvli-licens.html">The CVLI License</a></li>
-                <li><a href="literacy-program.html">Literacy Program/a></li>
+                <li><a href="literacy-program.html">Literacy Program</a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
                 <li><a href="merit-dorm.html">Merit Dorm</a></li>
@@ -88,18 +88,19 @@
           <p>
             When Jesus was berated for
             <br>eating with tax collectors and sinners,
-            <br>he answered, “It is not the healthy
+            <br>he answered, "It is not the healthy
             <br>who need a doctor, but the sick.
             <br>I have not come to call the righteous,
-            <br>but sinners.” &mdash;Mark 2:17
+            <br>but sinners."&mdash;Mark 2:17
             <br>
           </p>
           <img src="images/hope.jpg" alt="Razor wire against a blue sky backdrop, with quote, 'There is hope in Christ through prison ministry'.">
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
+        <h1 class="text-center ftg">Indigent Inmate Funds</h1>
         <p class="bring-down">
-          The Foundation makes direct deposits to the Inmate Trust Fund in the name of qualified indigent inmates
+          The Foundation makes direct deposits to the Inmate Trust Fund in the name of qualified indigent inmates (usually $10) to enable them to purchase personal hygeiene supplies (deoderant, toothpaste, etc.) which are not supplied by the prison.
         </p>
           <img src="images/confirmation.JPG" class="main-column-img center-block responsive" alt="Two champlains and two prisoners celebrating a confirmation.">
         <p>
