--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
                 <li><a href="santa.html">Santa in Prison</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="cvli-license.html">The CVLI License</a></li>
-                <li><a href="literacy-program.html">Literacy Program/a></li>
+                <li><a href="literacy-program.html">Literacy Program</a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
                 <li><a href="merit-dorm.html">Merit Dorm</a></li>
